# ultimaille-examples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml
examples/: CMakeLists.txt  algebra.cpp  create_fill_attributes.cpp  create_fill_attributes.md  create_polyline.cpp  create_tri_mesh.cpp  create_volume_mesh.cpp  edit_mesh.cpp  hard_edges.cpp  hello.cpp  helpers.h  iterate_primitives.cpp  iterate_primitives_conn.cpp  move_around_mesh.cpp  open_save_mesh.cpp  primitive_geometry.cpp  quad_subdivision.cpp  random_walk_faces.cpp  solver.cpp  split_mesh.cpp  vertex_distances.cpp
examples/assets/: catorus_tet.geogram  pyramid.geogram  tet_13225_hard_edges.geogram
