cmake_minimum_required(VERSION 3.12...3.26)

project(ultimaille-examples LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(hello hello.cpp)
add_executable(vertex_distances vertex_distances.cpp)
add_executable(hard_edges hard_edges.cpp)
add_executable(split_mesh split_mesh.cpp)
# add_executable(naive_subdivision naive_subdivision.cpp)
add_executable(open_save_mesh open_save_mesh.cpp)
add_executable(iterate_primitives iterate_primitives.cpp)
add_executable(iterate_primitives_conn iterate_primitives_conn.cpp)
add_executable(move_around_mesh move_around_mesh.cpp)
add_executable(random_walk_faces random_walk_faces.cpp)
add_executable(create_fill_attributes create_fill_attributes.cpp)
add_executable(create_tri_mesh create_tri_mesh.cpp)
add_executable(edit_mesh edit_mesh.cpp)

target_link_libraries(hello  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(vertex_distances  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(hard_edges  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(split_mesh  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
# target_link_libraries(naive_subdivision  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(open_save_mesh  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(iterate_primitives  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(iterate_primitives_conn  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(move_around_mesh  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(random_walk_faces  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(create_fill_attributes  ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(create_tri_mesh ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
target_link_libraries(edit_mesh ${CMAKE_DL_LIBS} ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)

IF (NOT WIN32)
	target_link_libraries(hello m)
    target_link_libraries(vertex_distances m)
    target_link_libraries(hard_edges m)
    target_link_libraries(split_mesh m)
    target_link_libraries(open_save_mesh m)
    target_link_libraries(iterate_primitives m)
    target_link_libraries(iterate_primitives_conn m)
    target_link_libraries(move_around_mesh m)
    target_link_libraries(random_walk_faces m)
    target_link_libraries(create_fill_attributes m)
    target_link_libraries(create_tri_mesh m)
    target_link_libraries(edit_mesh m)
ENDIF()

# Copy asset files to build directory
configure_file(assets/catorus.geogram assets/catorus.geogram COPYONLY)
# configure_file(assets/tet_13225.geogram assets/tet_13225.geogram COPYONLY)